--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -198,7 +198,8 @@
 }
 
 .post-title {
-/* PL     font-size: 42px; */
+    font-size: 18px;
+    font-weight: bold;
     letter-spacing: -1px;
     line-height: 1;
 
@@ -210,16 +211,22 @@
 .post-content {
     margin-bottom: $spacing-unit;
 
+    h1 {
+        font-size: 14px;
+        font-weight: bold;
+    }
+    
     h2 {
-        font-size: 15px;
-
+        font-size: 13px;
+        font-weight: bold;
         @include media-query($on-laptop) {
             font-size: 28px;
         }
     }
 
     h3 {
-        font-size: 26px;
+        font-size: 12px;
+        font-weight: bold;
 
         @include media-query($on-laptop) {
             font-size: 22px;
@@ -227,7 +234,8 @@
     }
 
     h4 {
-        font-size: 20px;
+        font-size: 12px;
+        font-style: italic;
 
         @include media-query($on-laptop) {
             font-size: 18px;
