--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -203,9 +203,9 @@
     letter-spacing: -1px;
     line-height: 1;
 
-    @include media-query($on-laptop) {
+    /*@include media-query($on-laptop) {
         font-size: 36px;
-    }
+    }*/
 }
 
 .post-content {
