--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -11,11 +11,12 @@
 }
 
 .site-title {
-    font-size: 26px;
+    //font-size: 26px;
     line-height: 56px;
-    letter-spacing: -1px;
+    //letter-spacing: -1px;
     margin-bottom: 0;
     float: left;
+    font-weight: bold;
 
     &,
     &:visited {
