--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -46,7 +46,8 @@
         position: absolute;
         top: 9px;
         right: 30px;
-        background-color: $background-color;
+        //background-color: $background-color;
+        background-color: white;
         border: 1px solid $grey-color-light;
         border-radius: 5px;
         text-align: right;
