--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -19,7 +19,8 @@ body {
     line-height: $base-line-height;
     font-weight: 300;
     color: $text-color;
-    background-color: $background-color;
+    //background-color: $background-color;
+    background-color: white;
     -webkit-text-size-adjust: 100%;
 }
 
