--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -200,9 +200,9 @@
 }
 
 .post-title {
-    font-size: 18px;
+    font-size: 12px;
     font-weight: bold;
-    letter-spacing: -1px;
+    //letter-spacing: -1px;
     line-height: 1;
 
     /*@include media-query($on-laptop) {
