--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -11,8 +11,8 @@
 }
 
 .site-title {
-    //font-size: 26px;
-    line-height: 1.5*$base-font-size;
+    font-size: $base-font-size;
+    //line-height: 1.5*$base-font-size;
     //letter-spacing: -1px;
     margin-bottom: 0;
     float: left;
