--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -12,7 +12,7 @@
 
 .site-title {
     font-size: $base-font-size;
-    //line-height: 1.5*$base-font-size;
+    line-height: $base-font-size;
     //letter-spacing: -1px;
     margin-bottom: 0;
     float: left;
