--- a/css/main.scss
+++ b/css/main.scss
@@ -3,7 +3,7 @@
 ---
 @charset "utf-8";
 
-
+@import url('https://fonts.googleapis.com/css?family=Shadows+Into+Light');
 
 // Our variables
 $base-font-family: Helvetica, Arial, sans-serif;
