--- a/css/main.scss
+++ b/css/main.scss
@@ -3,10 +3,10 @@
 ---
 @charset "utf-8";
 
-@import url('https://fonts.googleapis.com/css?family=Shadows+Into+Light');
+@import url('https://fonts.googleapis.com/css?family=Lato');
 
 // Our variables
-$base-font-family: Helvetica, Arial, sans-serif;
+$base-font-family: Lato, Arial, sans-serif;
 $base-font-size:   16px;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
