--- a/css/main.scss
+++ b/css/main.scss
@@ -6,7 +6,7 @@
 @import url('https://fonts.googleapis.com/css?family=Lato');
 
 // Our variables
-$base-font-family: Lato, Arial, sans-serif;
+$base-font-family: Lucida, Arial, sans-serif;
 $base-font-size:   16px;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
