--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -11,8 +11,8 @@ dl, dd, ol, ul, figure {
 
 table{
     border-collapse: collapse;
-    border-spacing: 0;
-    border:2px solid #ff0000;
+    border-spacing: 4px;
+    border:2px solid #000000;
 }
 
 th{
